# nfsdiag

./: .clang-tidy  .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  autogen.sh  config.mk.in  configure  configure.ac  flake.nix  nfsdiag.c  wrangler.jsonc
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-website.yml  release.yml
completions/: nfsdiag.bash  nfsdiag.fish  nfsdiag.zsh
dockerfiles/: Dockerfile.acl-unsupported  Dockerfile.empty-exports  Dockerfile.identity-denied  Dockerfile.locking-missing  Dockerfile.mount-denied  Dockerfile.mountd-unavailable  Dockerfile.nfs-port-unreachable  Dockerfile.permission-denied  Dockerfile.read-only-export  Dockerfile.root-squash  Dockerfile.rpc-map-missing-nfs  Dockerfile.rpcbind-unreachable  Dockerfile.slow-performance  Dockerfile.stale-handle  README.md
dockerfiles/common/: exports.all-squash  exports.denied  exports.empty  exports.ro  exports.root-squash  exports.rw  exports.stale  kernel-nfs-entrypoint.sh  rpcbind-only-entrypoint.sh  tcp-listener.py
docs/: nfsdiag.8  nfsdiag.schema.json
packaging/: Dockerfile  Dockerfile.apk  nfsdiag.control  nfsdiag.spec
packaging/aur/: PKGBUILD
packaging/homebrew/: nfsdiag.rb
packaging/nix/: flake.nix
src/: bench.c  client.c  ebpf.c  ebpf_latency.c  main.c  mount.c  network.c  nfsdiag.h  peer.c  report.c  rpc.c  serve.c  server.c  server_checks.c  server_exports.c  stats.c  tests.c  util.c  validation.c
src/bpf/: nfsdiag.bpf.c
tests/: check-cli-docs.sh  check-json-schema.sh  check-output-golden.sh  check-server.sh  check-signals.sh  check-subcommands.sh  check-versions.sh  check-website.sh  run-fixture-tests.sh  test_invariant_stats.c  unit-tests.c
tests/fuzz/: Makefile  fuzz_mountinfo.c  fuzz_mountstats.c  fuzz_rpcstats.c  (+1 more)
website/: 404.html  author.html  docs-server.html  docs.html  index.html  robots.txt  sitemap.xml
(+3 files in other folders)
